add more css properties

--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
               <span id="score2-span"></span>
             </div>
           </div>
-          <div class="row play-row">
-            <div class="">
-              <h3>Dice:</h3>
-              <img src="img/04dice.gif" border="0">
+          <div class="row play-row row-centered">
+            <div class="row-height-100">
+              <img class="gif" src="img/04dice.gif" border="0">
               <div><span id="dice-value"></span></div>
+              <div class="diceImage row-height-100">
+                <img id="dice-img" src="">
+              </div>
             </div>
+            <br>
             <div class="">
               <span class="btn btn-success" id="roll">Roll</span>
               <span class="btn btn-danger" id="hold">Hold</span>
